<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <artifactId>cora</artifactId>
    <groupId>com.adaptivebiotech.integration.test</groupId>
    <version>1.0.0</version>
    <name>Adaptive Biotechnologies Selenium Tests for Cora</name>
    <repositories>
        <repository>
            <id>adaptivebiotech-libs-release-local</id>
            <url>https://artifactory.dna.corp.adaptivebiotech.com:443/artifactory/libs-release-local/</url>
        </repository>
        <repository>
            <id>adaptivebiotech-libs-snapshot-local</id>
            <url>https://artifactory.dna.corp.adaptivebiotech.com:443/artifactory/libs-snapshot-local/</url>
        </repository>
    </repositories>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <parallel>methods</parallel>
        <threads>1</threads>
        <testng.verbose>2</testng.verbose>
    </properties>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.7.0</version>
                    <configuration>
                        <source>1.8</source>
                        <target>1.8</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.21.0</version>
                    <configuration>
                        <parallel>${parallel}</parallel>
                        <threadCount>${threads}</threadCount>
                        <argLine>-Xmx1024m</argLine>
                        <argLine>-XX:MaxPermSize=512m</argLine>
                        <includes>
                            <include>**/*TestSuite.java</include>
                        </includes>
                        <systemPropertyVariables>
                            <test.env>${project.activeProfiles[0].id}</test.env>
                            <tags>${tags}</tags>
                            <cora.test.user>svc_cora_test_phi_preprod</cora.test.user>
                            <cora.test.pass>5/f+ssiOuIjC9yK9fXLmKA==</cora.test.pass>
                            <cora.test.url>${cora.test.url}</cora.test.url>
                            <test.version>${project.version}</test.version>
                            <test.maxWaitTime>10</test.maxWaitTime>
                        </systemPropertyVariables>
                        <properties>
                            <property>
                                <name>surefire.testng.verbose</name>
                                <value>${testng.verbose}</value>
                            </property>
                        </properties>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.m2e</groupId>
                    <artifactId>lifecycle-mapping</artifactId>
                    <version>1.0.0</version>
                    <configuration>
                        <lifecycleMappingMetadata>
                            <pluginExecutions>
                                <pluginExecution>
                                    <pluginExecutionFilter>
                                        <groupId>org.apache.maven.plugins</groupId>
                                        <artifactId>maven-dependency-plugin</artifactId>
                                        <versionRange>[3.0.0,)</versionRange>
                                        <goals>
                                            <goal>unpack</goal>
                                        </goals>
                                    </pluginExecutionFilter>
                                    <action>
                                        <execute />
                                    </action>
                                </pluginExecution>
                            </pluginExecutions>
                        </lifecycleMappingMetadata>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>unpack</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>unpack</goal>
                        </goals>
                        <configuration>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>com.adaptivebiotech.test.utils</groupId>
                                    <artifactId>selenium-base</artifactId>
                                    <includes>chromedriver*,geckodriver*</includes>
                                    <overWrite>true</overWrite>
                                    <outputDirectory>target/test-classes</outputDirectory>
                                </artifactItem>
                            </artifactItems>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>com.adaptivebiotech.test.utils</groupId>
            <artifactId>selenium-base</artifactId>
            <version>1.1.4</version>
        </dependency>
        <dependency>
            <groupId>com.adaptivebiotech.test.utils</groupId>
            <artifactId>test-commons</artifactId>
            <version>1.0.4</version>
        </dependency>
    </dependencies>
    <profiles>
        <profile>
            <id>test1</id>
            <properties>
                <cora.test.url>https://cora-test.dna.corp.adaptivebiotech.com</cora.test.url>
            </properties>
        </profile>
        <profile>
            <id>test2</id>
            <properties>
                <cora.test.url>https://cora-test-2.dna.corp.adaptivebiotech.com</cora.test.url>
            </properties>
        </profile>
        <profile>
            <id>test3</id>
            <properties>
                <cora.test.url>https://cora-test-3.dna.corp.adaptivebiotech.com</cora.test.url>
            </properties>
        </profile>
        <profile>
            <id>am-test</id>
            <properties>
                <cora.test.url>https://cora-am-test.dna.corp.adaptivebiotech.com</cora.test.url>
            </properties>
        </profile>
        <profile>
            <id>stage1</id>
            <properties>
                <cora.test.url>https://cora-stage.dna.corp.adaptivebiotech.com</cora.test.url>
            </properties>
        </profile>
        <profile>
            <id>stage2</id>
            <properties>
                <cora.test.url>https://cora-stage-2.dna.corp.adaptivebiotech.com</cora.test.url>
            </properties>
        </profile>
    </profiles>
</project>